<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="refresh_header_pulling">下拉可以刷新</string>
    <string name="refresh_header_refreshing">正在刷新</string>
    <string name="refresh_header_loading">正在加载</string>
    <string name="refresh_header_release">松开立即刷新</string>
    <string name="refresh_header_finish">刷新完成</string>
    <string name="refresh_header_failed">刷新失败</string>
    <string name="refresh_header_update">最后更新 M-d HH:mm</string>
    <string name="refresh_footer_pulling">上拉加载更多</string>
    <string name="refresh_footer_release">释放立即加载</string>
    <string name="refresh_footer_loading">正在加载</string>
    <string name="refresh_footer_refreshing">正在刷新</string>
    <string name="refresh_footer_finish">加载完成</string>
    <string name="refresh_footer_failed">加载失败</string>
    <string name="refresh_footer_nothing">已经全部加载完毕</string>
    <string name="black">拉黑</string>
    <string name="black_ing">解除拉黑</string>
    <string name="black_1">已拉黑</string>
    <string name="black_ing_1">已解除拉黑</string>
    <string name="bonus_sign">立即签到</string>
    <string name="bonus_sign_1">已连续签到</string>
    <string name="bonus_day">天</string>
    <string name="beauty_init_error">美颜初始化异常，无法使用</string>
    <string name="cash">提现账户</string>
    <string name="cash_account_empty">您当前还没设置提现账户</string>
    <string name="cash_add_account">添加提现账户</string>
    <string name="cash_account_type">账户类型</string>
    <string name="cash_input_bank_user_name">请输入持卡人姓名</string>
    <string name="cash_input_bank_account">请输入银行卡账号</string>
    <string name="cash_input_bank_name">请输入银行名称</string>
    <string name="cash_input_wx_account">请输入微信账号</string>
    <string name="cash_input_ali_account">请输入支付宝账号</string>
    <string name="cash_input_ali_name">请输入支付宝账号姓名</string>
    <string name="cash_type_ali">支付宝</string>
    <string name="cash_type_wx">微信</string>
    <string name="cash_type_bank">银行卡</string>
    <string name="cash_delete">是否要删除该账户？</string>
    <string name="cash_record">提现记录</string>
    <string name="coin_give">赠送</string>
    <string name="coin_balance">账户余额</string>
    <string name="coin_pay_ali">支付宝</string>
    <string name="coin_pay_wx">微信支付</string>
    <string name="coin_charge_success">充值成功</string>
    <string name="coin_charge_failed">充值失败</string>
    <string name="coin_ali_not_install">未安装支付宝</string>
    <string name="coin_wx_not_install">未安装微信</string>
    <string name="coin_qq_not_install">未安装QQ</string>
    <string name="pay_ali_not_enable">支付宝未配置</string>
    <string name="pay_wx_not_enable">微信未配置</string>
    <string name="copy_link">复制链接</string>
    <string name="copy_success">复制成功</string>
    <string name="edit_profile">编辑资料</string>
    <string name="edit_profile_avatar">头像</string>
    <string name="edit_profile_nickname">昵称</string>
    <string name="edit_profile_update_nickname">修改昵称</string>
    <string name="edit_profile_update_sign">修改签名</string>
    <string name="edit_profile_sign">签名</string>
    <string name="edit_profile_birthday">生日</string>
    <string name="edit_profile_sex">性别</string>
    <string name="edit_profile_city">所在地</string>
    <string name="edit_profile_impression">我的主播印象</string>
    <string name="edit_profile_update_avatar_success">设置头像成功</string>
    <string name="edit_profile_sign_hint">留下点什么吧</string>
    <string name="edit_profile_name_hint">请输入昵称</string>
    <string name="edit_profile_sign_max">最多可输入20个字</string>
    <string name="edit_profile_name_max">昵称最多8个字</string>
    <string name="edit_profile_name_empty">请输入昵称</string>
    <string name="edit_profile_sign_empty">请输入签名</string>
    <string name="edit_profile_right_date">请选择正确的日期</string>
    <string name="edit_profile_length_font">字数超出限制</string>
    <string name="newest">最新</string>
    <string name="follow">关注</string>
    <string name="following">已关注</string>
    <string name="follow_no_follow">你还没有关注任何人</string>
    <string name="follow_do_follow">赶快去关注自己感兴趣的人吧</string>
    <string name="follow_no_follow_2">TA还没有关注任何人</string>
    <string name="fans">粉丝</string>
    <string name="fans_no_fans">你还没有粉丝</string>
    <string name="fans_do_fans">完善个人信息会让更多的人关注到你哦</string>
    <string name="fans_no_fans_2">TA还没有任何粉丝</string>
    <string name="find_pwd_forget">忘记密码</string>
    <string name="find_pwd_find">立即找回</string>
    <string name="guard_choose_duration">选择守护时长</string>
    <string name="guard_right">选择特权</string>
    <string name="guard_buy">立即开通</string>
    <string name="guard_buy_2">开通守护</string>
    <string name="guard_buy_3">续费守护</string>
    <string name="guard_my">我的</string>
    <string name="guard_guard">守护</string>
    <string name="guard_week_con">本周贡献</string>
    <string name="guard_no_data">成为TA的第一个守护</string>
    <string name="guard_tip_0">快去为喜欢的主播开通守护吧</string>
    <string name="guard_tip_1">您是当前主播的月守护\n守护日期截止到</string>
    <string name="guard_tip_2">您是当前主播的年守护\n守护日期截止到</string>
    <string name="guard_gift_tip">年守护专属礼物</string>
    <string name="guard_no_data_2">你还没有守护哦</string>
    <string name="guard_buy_tip">您为当前主播的年守护\n无法开通7天/月守护</string>
    <string name="guard_buy_tip_2">您为当前主播的月守护，开通年守护将覆盖您的月守护时长，是否开通？</string>
    <string name="guard_buy_tip_3">您将花费%1$s%2$s，为主播开通%3$s</string>
    <string name="guard_name_1">7天守护</string>
    <string name="guard_name_2">月守护</string>
    <string name="guard_name_3">年守护</string>
    <string name="guard_list">守护榜</string>
    <string name="guard_buy_msg">守护了主播</string>
    <string name="home_page">主页</string>
    <string name="home_page_share_1">"%1$s"也在%2$s，~点击查看TA的故事</string>
    <string name="home_page_share_2">TA有%1$s粉丝，快来围观呀！</string>
    <string name="im_live_anchor_msg">Hi~我是主播，快来和我聊天吧。</string>
    <string name="im_type_image">[图片]</string>
    <string name="im_type_voide">[语音]</string>
    <string name="im_type_location">[位置]</string>
    <string name="im_msg">消息</string>
    <string name="im_msg_ignore_unread">忽略未读</string>
    <string name="im_msg_ignore_unread_2">已忽略未读消息</string>
    <string name="im_msg_ignore_unread_3">暂无未读消息</string>
    <string name="im_msg_send_failed">消息发送失败</string>
    <string name="im_send_too_fast">操作频繁</string>
    <string name="im_you_are_blacked">对方暂时拒绝接收您的消息</string>
    <string name="im_no_msg">你还没有收到任何消息</string>
    <string name="im_send_msg">发送消息...</string>
    <string name="im_input_img">图片</string>
    <string name="im_input_camera">拍摄</string>
    <string name="im_input_voice">语音输入</string>
    <string name="im_input_location">位置</string>
    <string name="im_choose_image">选择图片</string>
    <string name="im_no_image">没有找到图片</string>
    <string name="im_please_choose_image">请选择图片</string>
    <string name="im_search_location">搜索地点</string>
    <string name="im_location_failed">未获取到位置信息</string>
    <string name="im_map_not_loaded">地图未加载</string>
    <string name="im_address_failed">未获取到地址</string>
    <string name="im_get_location_failed">获取位置失败</string>
    <string name="im_follow_tip">点击关注，可及时看到对方动态</string>
    <string name="im_follow_tip_2">关注对方成功</string>
    <string name="im_press_say">按住 说话</string>
    <string name="im_unpress_stop">松开 结束</string>
    <string name="im_please_say">请说话...</string>
    <string name="im_record_audio_too_short">录音时间太短</string>
    <string name="video_comment_voice_tip">手指上滑，取消发送</string>
    <string name="video_comment_voice_tip_1">已取消发送</string>
    <string name="im_system_msg">系统消息</string>
    <string name="im_no_sys_msg">暂无系统消息</string>
    <string name="im_pri_chat">私聊</string>
    <string name="impress">主播印象</string>
    <string name="impress_add">添加印象</string>
    <string name="impress_add_max">最多选择三项</string>
    <string name="impress_please_choose">请选择印象</string>
    <string name="impress_not_changed">未修改印象</string>
    <string name="impress_tip">请选择你对主播的印象</string>
    <string name="impress_tip_2">你收到的主播印象</string>
    <string name="impress_tip_3">你还没有收到印象哦</string>
    <string name="img_camera_cancel">取消拍照</string>
    <string name="img_alumb_cancel">取消选择</string>
    <string name="img_crop_cancel">取消裁剪</string>
    <string name="record_cancel">取消录制</string>
    <string name="login_tip_0">您的登陆状态失效，请重新登陆！</string>
    <string name="login_tip_1">登录即代表同意</string>
    <string name="login_tip_2">服务和隐私条款</string>
    <string name="login_other_type">其他登录方式</string>
    <string name="login_tip_3">注册登录后体验更多精彩</string>
    <string name="login_input_phone">请输入您的手机号</string>
    <string name="login_input_pwd">请输入密码</string>
    <string name="login_immediately_login">立即登录</string>
    <string name="login_ing">登录中</string>
    <string name="login_immediately_register">立即注册</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_phone_error">请输入正确的手机号码</string>
    <string name="login_auth_ing">正在授权登录</string>
    <string name="login_auth_success">登录成功</string>
    <string name="login_auth_failure">授权失败</string>
    <string name="login_auth_cancle">授权取消</string>
    <string name="live">直播</string>
    <string name="live_anchor">主播</string>
    <string name="live_start">开始直播</string>
    <string name="live_room_type">房间类型</string>
    <string name="live_share_to">分享至</string>
    <string name="live_share_to_2">分享至（左右滑动更多分享）</string>
    <string name="live_cover">直播封面</string>
    <string name="live_cover_2">更换封面</string>
    <string name="live_title">直播标题</string>
    <string name="live_title_hint">给直播写个标题吧</string>
    <string name="live_class">频道</string>
    <string name="live_class_choose">选择直播频道</string>
    <string name="live_class_tip">注意选择适合自己的频道。直播过程中，若运营人员发现选择的频道和直播内容不相符的情况，会调整您的直播频道。</string>
    <string name="live_set_pwd">请设置房间密码</string>
    <string name="live_set_fee">请设置收费金额\n（收益以直播结束显示为准）</string>
    <string name="live_set_pwd_empty">请设置房间密码</string>
    <string name="live_set_fee_empty">请设置收费金额</string>
    <string name="live_time_fee">收费金额</string>
    <string name="live_choose_charge">选择收费</string>
    <string name="live_end_live">是否要结束直播？</string>
    <string name="live_beauty">美颜</string>
    <string name="live_camera">翻转</string>
    <string name="live_flash">闪光灯</string>
    <string name="live_music">伴奏</string>
    <string name="live_share">分享</string>
    <string name="live_game">游戏</string>
    <string name="live_mirror">镜像</string>
    <string name="live_mirror_1">您已开启镜像</string>
    <string name="live_mirror_0">您已关闭镜像</string>
    <string name="live_red_pack">红包</string>
    <string name="live_link_mic">连麦</string>
    <string name="live_open_flash">只有后置摄像头才能开启闪光灯</string>
    <string name="live_open_flash_error">打开闪光灯失败</string>
    <string name="live_you_are_shut">你已经被禁言</string>
    <string name="live_end">直播已结束</string>
    <string name="live_back">返回首页</string>
    <string name="live_duration">直播时长</string>
    <string name="live_votes">收获</string>
    <string name="live_watch_num">观看人数</string>
    <string name="live_end_ing">关播中</string>
    <string name="live_say_something">和大家说些什么</string>
    <string name="live_open_alba">开启弹幕，</string>
    <string name="live_tiao">条</string>
    <string name="live_input_password">请输入房间密码</string>
    <string name="live_password_error">密码错误</string>
    <string name="live_play_error">播放失败</string>
    <string name="live_play_error_2">视频格式不支持</string>
    <string name="live_url_contain_zh">视频地址包含中文，无法播放</string>
    <string name="live_guard">守护</string>
    <string name="live_setting_gap">永久禁言</string>
    <string name="live_setting_admin_list">管理员列表</string>
    <string name="main_my_config_customer_service">客服</string>
    <string name="main_home">首页</string>
    <string name="main_game">赛事</string>
    <string name="main_video">视频</string>
    <string name="main_active">动态</string>
    <string name="main_me">我的</string>
    <string name="cancel">取消</string>
    <string name="live_set_is_admin">设为管理员</string>
    <string name="name_football">足球</string>
    <string name="basketball">篮球</string>
    <string name="e_sports">电竞</string>
    <string name="other">其他</string>
</resources>