<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    >

    <com.yunbao.common.custom.MyViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:canScroll="false" />

    <FrameLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        >
       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@drawable/ssdk_weibo_common_shadow_top"/>
        <com.yunbao.common.custom.TabButtonGroup
            android:id="@+id/tab_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
<!--            首页-->
            <com.yunbao.common.custom.TabButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tbn_checked="true"
                app:tbn_icon_array_id="@array/main_tab_home"
                app:tbn_icon_size="26dp"
                app:tbn_text_color_checked="@color/black2"
                app:tbn_text_color_unchecked="@color/gray1"
                app:tbn_text_color_black_checked="#FFAD1A"
                app:tbn_text_size="11sp"
                app:tbn_tip="@string/main_home"
                />

<!--            赛事-->
            <com.yunbao.common.custom.TabButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tbn_icon_array_id="@array/main_tab_game"
                app:tbn_icon_size="26dp"
                app:tbn_text_color_checked="@color/black2"
                app:tbn_text_color_unchecked="@color/gray1"
                app:tbn_text_color_black_checked="#FFAD1A"
                app:tbn_text_size="11sp"
                app:tbn_tip="@string/main_game" />

<!--            自定义走后台接口-->
            <com.yunbao.common.custom.TabButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tbn_icon_array_id="@array/main_tab_active"
                app:tbn_icon_size="26dp"
                app:tbn_text_color_checked="@color/black2"
                app:tbn_text_color_unchecked="@color/gray1"
                app:tbn_text_color_black_checked="#FFAD1A"
                app:tbn_text_size="11sp"
                app:tbn_tip="@string/main_my_config_customer_service"
                />


            <!--            视频-->
            <com.yunbao.common.custom.TabButton
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tbn_icon_array_id="@array/main_tab_video"
                app:tbn_icon_size="26dp"
                app:tbn_text_color_checked="@color/black2"
                app:tbn_text_color_unchecked="@color/gray1"
                app:tbn_text_color_black_checked="#FFAD1A"
                app:tbn_text_size="11sp"
                app:tbn_tip="@string/main_video"
                />

<!--            动态-->
            <com.yunbao.common.custom.TabButton
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tbn_icon_array_id="@array/main_tab_active"
                app:tbn_icon_size="26dp"
                app:tbn_text_color_checked="@color/black2"
                app:tbn_text_color_unchecked="@color/gray1"
                app:tbn_text_color_black_checked="#FFAD1A"
                app:tbn_text_size="11sp"
                app:tbn_tip="@string/main_active" />

<!--            我的-->
            <com.yunbao.common.custom.TabButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tbn_icon_array_id="@array/main_tab_me"
                app:tbn_icon_size="26dp"
                app:tbn_text_color_checked="@color/black2"
                app:tbn_text_color_unchecked="@color/gray1"
                app:tbn_text_color_black_checked="#FFAD1A"
                app:tbn_text_size="11sp"
                app:tbn_tip="@string/main_me"
                />

        </com.yunbao.common.custom.TabButtonGroup>

        <ImageView
            android:visibility="gone"
            android:id="@+id/btn_start"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="5dp"
            android:onClick="mainClick"
            android:src="@mipmap/icon_main_start"
            />
    </FrameLayout>


</RelativeLayout>
