<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/btn_admin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tv_live_set_is_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/live_set_is_admin"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_user_admin_list"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/live_setting_admin_list"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_user_banned"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/live_setting_gap"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_user_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/cancel"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gray2" />
    </RelativeLayout>

</LinearLayout>
