<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/dp30"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_football"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_football"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_shape_rounded_corners_red"
                    android:paddingStart="@dimen/dp10"
                    android:paddingTop="@dimen/dp5"
                    android:paddingEnd="@dimen/dp10"
                    android:paddingBottom="@dimen/dp5"
                    android:text="@string/name_football"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_basketball"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_basketball"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dp10"
                    android:paddingTop="@dimen/dp5"
                    android:paddingEnd="@dimen/dp10"
                    android:paddingBottom="@dimen/dp5"
                    android:text="@string/basketball"
                    android:textColor="@color/black2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_Lol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tv_Lol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dp10"
                    android:paddingTop="@dimen/dp5"
                    android:paddingEnd="@dimen/dp10"
                    android:paddingBottom="@dimen/dp5"
                    android:text="@string/e_sports"
                    android:textColor="@color/black2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dp10"
                    android:paddingTop="@dimen/dp5"
                    android:paddingEnd="@dimen/dp10"
                    android:paddingBottom="@dimen/dp5"
                    android:text="@string/other"
                    android:textColor="@color/black2"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray2" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray2" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</FrameLayout>